--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "discord-py[voice] (>=2.5.2,<3.0.0)",
+    "yt-dlp (>=2025.2.19,<2026.0.0)",
+    "asyncio (>=3.4.3,<4.0.0)"
 ]
 
 [tool.poetry]
