--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,29 +1,18 @@
-name: Security Checks
+name: Security Scan
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, dev ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, dev ]
 
 jobs:
   security:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry safety
-
-      - name: Install project dependencies
-        run: poetry install
-
-      - name: Run safety check
-        run: poetry export -f requirements.txt | safety check --stdin
+      
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
