--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -32,4 +32,4 @@ jobs:
         run: poetry install
 
       - name: Run safety check
-        run: poetry export --format requirements.txt | safety check --stdin
+        run: poetry export --format requirements.txt | safety scan --stdin
