--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,19 @@ dependencies = [
     "uvloop (>=0.21.0,<0.22.0)",
     "aiodns (>=3.2.0,<4.0.0)",
     "brotli (>=1.1.0,<2.0.0)",
-    "orjson (>=3.10.15,<4.0.0)"
+    "orjson (>=3.10.15,<4.0.0)",
 ]
 
 [tool.poetry]
 packages = [{include = "keion", from = "src"}]
+
+[tool.poetry.group.dev.dependencies]
+black = "^25.1.0"
+
+[tool.black]
+line-length = 88
+target-version = ['py312']
+include = '\.pyi?$'
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
