--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
+          python-version: "3.12"
 
       - name: Install poetry
         run: |
@@ -32,4 +32,4 @@ jobs:
         run: poetry install
 
       - name: Run safety check
-        run: poetry export --format requirements.txt | safety scan --stdin
+        run: poetry export --format requirements.txt | safety check --stdin
