--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,12 @@ dependencies = [
     "aiodns (>=3.2.0,<4.0.0)",
     "brotli (>=1.1.0,<2.0.0)",
     "orjson (>=3.10.15,<4.0.0)",
+    "uvicorn (>=0.34.0,<0.35.0)",
+    "fastapi (>=0.115.12,<0.116.0)",
+    "jinja2 (>=3.1.6,<4.0.0)",
+    "aiofiles (>=24.1.0,<25.0.0)",
+    "websockets (>=15.0.1,<16.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)",
 ]
 
 [tool.poetry]
