--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -10,15 +10,19 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4 # Updated version
+      - uses: actions/setup-python@v5 # Updated version
         with:
           python-version: "3.12"
-      - name: Install dependencies
+          cache: "poetry" # Added caching
+
+      - name: Install Poetry
         run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-          poetry install
+          pipx install poetry # Recommended way to install poetry in CI
+
+      - name: Install dependencies
+        run: poetry install --no-interaction # Removed pip install poetry, added --no-interaction
+
       - name: Run Ruff
         run: poetry run ruff check .
       - name: Run Black
