feat musicbrainz client

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 DISCORD_TOKEN=YOUR_DISCORD_BOT_TOKEN
+SPOTIFY_CLIENT_ID=YOUR_SPOTIFY_CLIENT_ID
+SPOTIFY_CLIENT_SECRET=YOUR_SPOTIFY_CLIENT_SECRET
+SPOTIFY_USER_ID=YOUR_SPOTIFY_USER_ID
+# DISCOGS_PERSONAL_TOKEN=YOUR_DISCOGS_PERSONAL_TOKEN
+WEB_HOST=
+WEB_PORT=
