--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "aiofiles (>=24.1.0,<25.0.0)",
     "websockets (>=15.0.1,<16.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
+    "musicbrainzngs (>=0.7.1,<0.8.0)",
 ]
 
 [tool.poetry]
